--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,7 @@ comments:
     owner       : 'BepfCp' # GitHub repo owner
     admin: ['BepfCp'] # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       # - your GitHub Id
+    proxy: https://netnr-proxy.cloudno.de/https://github.com/login/oauth/access_token
 
   ## Valine
   # please refer to https://valine.js.org/en/ for more info.
